# opaque-mono

./: .gitignore  Cargo.toml  INTEGRATION.md  LITEPAPER.md  README.md  environments.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wallet_1769815225647.json
circuits/: main.circom  package-lock.json  package.json
circuits/scripts/: build.sh  export_vk.js  generate_inputs.rs  test.js
contracts/: CONTRACT_OVERVIEW.txt  Cargo.toml
contracts/opaque/: Cargo.toml
contracts/opaque/libs/poseidon/src/: lib.rs
contracts/opaque/libs/zk-verifier/: Cargo.toml
contracts/opaque/src/: lib.rs  test.rs
contracts/opaque/test_snapshots/test/: test_contract_initialization.1.json  test_deposit_and_withdraw_correct_proof.1.json  test_withdraw_association_root_mismatch.1.json  test_withdraw_requires_association_root.1.json  test_withdraw_without_association_set.1.json
contracts/source/opaque/: Cargo.toml
contracts/source/opaque/src/: lib.rs  test.rs
contracts/source/opaque/test_snapshots/test/: test_deposit_and_withdraw_correct_proof.1.json  test_deposit_and_withdraw_wrong_proof.1.json  test_reuse_nullifier.1.json  test_set_association_root_non_admin.1.json  test_withdraw_insufficient_balance.1.json
public/circuits/: main.wasm
scripts/: create_wallet_and_deposit.cjs  deploy.sh  generate_vk_hex.js  set_association_root.cjs
scripts/test/: create_wallet.cjs  deposit.cjs  state.cjs  state.json  transfer.cjs
src/: App.tsx
src/components/: ConnectAccount.tsx  FundAccountButton.tsx  Navbar.tsx  NetworkPill.tsx  WalletButton.tsx
src/pages/: Deposit.tsx  Home.tsx  PrivacyDeposit.tsx  Wallet.tsx  (+1 more)
webapp/: package.json
(+17 files in other folders)
