[package]
name = "opaque"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
lean-incremental-merkle-tree = { path = "../libs/lean-incremental-merkle-tree" }
zk-verifier = { path = "../libs/zk-verifier" }
ark-ff = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
hex = { version = "0.4.3" }