[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }